<resources>
    <string name="app_name">Inventory Apps</string> <string name="inventory_apps_title">Inventory Apps</string> <string name="login_title">Login</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="login_button_text">Login</string>
    <string name="register_title">Registrasi Akun Baru</string>

    <string name="login_illustration_desc">Ilustrasi untuk halaman login</string>

    <string name="login_successful_message">Login Berhasil!</string>
    <string name="username_password_empty_message">Username dan Password tidak boleh kosong!</string>
    <string name="email_empty_error">Email tidak boleh kosong</string>
    <string name="invalid_email_format_error">Format email tidak valid</string>
    <string name="password_empty_error">Password tidak boleh kosong</string>
    <string name="login_failed_message">Login gagal: %1$s</string> <string name="unknown_error">Terjadi kesalahan tidak diketahui</string>

</resources>
